# chatbot

./: .gitignore  README.md  app.py  pyproject.toml  ui.py
local/: docker-compose.yml
